src/app.css
@import 'tailwindcss';

@theme {
	--color-lighttext: #e4e4e4;
	--color-darktext: #1e1e1e;
	--color-html: #e44c20;
	--color-typescript: #3577c4;
	--color-javascript: #f6df1f;
	--color-css: #673299;
	--color-python: #fed34d;
	--color-python-dark: #3971a1;
	--color-rust: #e43616;
	--color-svelte: #ff4000;
	--color-react: #59c3db;
	--color-git: #f34e28;
	--color-nodejs: #6bbf47;
	--color-windows: #0079d5;
	--color-linux: #ffffff;
	--color-archlinux: #08c;
	--color-vscode: #22acf3;
	--color-typst: #289cab;
	--color-github: #8250df;
	--color-docker: #2560ff;
	--color-tailwind: #01bbff;
}

@layer utilities {
	.text-lighttext {
		color: var(--color-lighttext);
	}
	.text-darktext {
		color: var(--color-darktext);
	}
	.bg-html {
		background-color: var(--color-html);
	}
	.text-html {
		color: var(--color-html);
	}
	.border-html {
		border-color: var(--color-html);
	}

	.bg-typescript {
		background-color: var(--color-typescript);
	}
	.text-typescript {
		color: var(--color-typescript);
	}
	.border-typescript {
		border-color: var(--color-typescript);
	}

	.bg-javascript {
		background-color: var(--color-javascript);
	}
	.text-javascript {
		color: var(--color-javascript);
	}
	.border-javascript {
		border-color: var(--color-javascript);
	}

	.bg-css {
		background-color: var(--color-css);
	}
	.text-css {
		color: var(--color-css);
	}
	.border-css {
		border-color: var(--color-css);
	}

	.bg-python {
		background-color: var(--color-python);
	}
	.text-python {
		color: var(--color-python);
	}
	.border-python {
		border-color: var(--color-python);
	}
	.bg-python-dark {
		background-color: var(--color-python-dark);
	}
	.text-python-dark {
		color: var(--color-python-dark);
	}
	.border-python-dark {
		border-color: var(--color-python-dark);
	}

	.bg-rust {
		background-color: var(--color-rust);
	}
	.text-rust {
		color: var(--color-rust);
	}
	.border-rust {
		border-color: var(--color-rust);
	}

	.bg-svelte {
		background-color: var(--color-svelte);
	}
	.text-svelte {
		color: var(--color-svelte);
	}
	.border-svelte {
		border-color: var(--color-svelte);
	}

	.bg-react {
		background-color: var(--color-react);
	}
	.text-react {
		color: var(--color-react);
	}
	.border-react {
		border-color: var(--color-react);
	}

	.bg-git {
		background-color: var(--color-git);
	}
	.text-git {
		color: var(--color-git);
	}
	.border-git {
		border-color: var(--color-git);
	}

	.bg-nodejs {
		background-color: var(--color-nodejs);
	}
	.text-nodejs {
		color: var(--color-nodejs);
	}
	.border-nodejs {
		border-color: var(--color-nodejs);
	}

	.bg-windows {
		background-color: var(--color-windows);
	}
	.text-windows {
		color: var(--color-windows);
	}
	.border-windows {
		border-color: var(--color-windows);
	}

	.bg-linux {
		background-color: var(--color-linux);
	}
	.text-linux {
		color: var(--color-linux);
	}
	.border-linux {
		border-color: var(--color-linux);
	}

	.bg-archlinux {
		background-color: var(--color-archlinux);
	}
	.text-archlinux {
		color: var(--color-archlinux);
	}
	.border-archlinux {
		border-color: var(--color-archlinux);
	}

	.bg-vscode {
		background-color: var(--color-vscode);
	}
	.text-vscode {
		color: var(--color-vscode);
	}
	.border-vscode {
		border-color: var(--color-vscode);
	}

	.bg-typst {
		background-color: var(--color-typst);
	}
	.text-typst {
		color: var(--color-typst);
	}
	.border-typst {
		border-color: var(--color-typst);
	}

	.bg-github {
		background-color: var(--color-github);
	}
	.text-github {
		color: var(--color-github);
	}
	.border-github {
		border-color: var(--color-github);
	}

	.bg-docker {
		background-color: var(--color-docker);
	}
	.text-docker {
		color: var(--color-docker);
	}
	.border-docker {
		border-color: var(--color-docker);
	}

	.bg-tailwind {
		background-color: var(--color-tailwind);
	}
	.text-tailwind {
		color: var(--color-tailwind);
	}
	.border-tailwind {
		border-color: var(--color-tailwind);
	}
}

@custom-variant dark (&:where(.dark, .dark *));

@font-face {
	font-family: 'NerdFont';
	src: url('./fonts/HackNerdFont-Regular.woff2') format('woff2');
	font-weight: normal;
	font-style: normal;
	font-display: swap;
}

@layer base {
	html {
		scroll-behavior: smooth;
	}

	/* ライトモードの時の変数 */
	:root {
		--bg-color: #fcf6e2;
		--text-color: #1e1e1e;
	}

	/* ダークモードの時の変数 */
	.dark {
		--bg-color: #1e1e1e;
		--text-color: #e4e4e4;
	}

	/* bodyタグ全体にその変数を適用する */
	body {
		background-color: var(--bg-color);
		color: var(--text-color);
		@apply transition-colors duration-300;
	}
}

@layer components {
	.commandline-enable {
		@apply translate-y-0 pointer-events-auto opacity-100;
	}
	.commandline-disable {
		@apply -translate-y-4 pointer-events-none opacity-0;
	}
}

@keyframes blink {
	0%,
	50%,
	100% {
		opacity: 1;
	}
	25%,
	75% {
		opacity: 0;
	}
}

.animate-blink {
	animation: blink 3s steps(1) infinite;
}

